tinyc/test/bad/ptr-to-void-assign.c
int main()
{
    int x = 42;
    void *p = &x;

    *p = 20;

    return 0;
}
